moving over diff stuff from unitizer

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,6 @@ Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
 RoxygenNote: 5.0.1
+Collate:
+    'core.R'
+    'diff.R'
