renaming to diffobj

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,4 @@ export(diff_print)
 export(diff_ses)
 export(diff_str)
 exportMethods(summary)
-useDynLib(diffr, .registration=TRUE, .fixes="DIFFR_")
+useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
