--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,21 @@
-Package: diffr
+Package: diffobj
 Type: Package
-Title: What the package does (short line)
-Version: 1.0
+Title: R Object Comparison Using Diff
+Description: Compare R objects by computing a `diff` on their text representations (e.g. the `print`ed console output).  This is similar to `tools::Rdiff` except the diff is computed directly on R objects instead of text files and does not rely on the system `diff` utility.
+Version: 0.0.1
 Date: 2016-01-20
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Authors@R: c(
+    person(
+    "Brodie", "Gaslam", email="brodie.gaslam@yahoo.com",
+    role=c("aut", "cre")),
+    person(
+    "Michael B.", "Allen", email="ioplex@gmail.com",
+    role=c("cph"),
+    comment="C implementation of Myers Diff Algorithm"))
+License: GPL-3 + file LICENSE
+LazyData: true
+URL: https://github.com/brodieG/diffobj
+BugReports: https://github.com/brodieG/diffobj/issues
 RoxygenNote: 5.0.1
 Collate:
     'system.R'
