--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,10 @@
 Package: diffobj
 Type: Package
 Title: R Object Comparison Using Diff
-Description: Compare R objects by computing a `diff` on their text representations (e.g. the `print`ed console output).  This is similar to `tools::Rdiff` except the diff is computed directly on R objects instead of text files and does not rely on the system `diff` utility.
+Description: Compare R objects by computing a `diff` on their text
+    representations (e.g. the `print`ed console output). This is similar to
+    `tools::Rdiff` except the diff is computed directly on R objects instead of text
+    files and does not rely on the system `diff` utility.
 Version: 0.0.1
 Date: 2016-01-20
 Authors@R: c(
@@ -18,6 +21,7 @@ URL: https://github.com/brodieG/diffobj
 BugReports: https://github.com/brodieG/diffobj/issues
 RoxygenNote: 5.0.1
 Collate:
-    'system.R'
+    's4.R'
     'core.R'
     'diff.R'
+    'system.R'
