--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(diff_print)
 export(diff_ses)
 export(diff_str)
 exportMethods(summary)
+import(ansistyle)
 useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
