--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: diffobj
 Type: Package
-Title: R Object Comparison Using Diff
+Title: Compare R Objects with a Text Diff
 Description: Compare R objects by computing a `diff` on their text
     representations (e.g. the `print`ed console output). This is similar to
     `tools::Rdiff` except the diff is computed directly on R objects instead of
