--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(Rdiff_chr)
 export(Rdiff_obj)
 export(diff_chr)
+export(diff_deparse)
 export(diff_obj)
 export(diff_print)
 export(diff_ses)
