--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ URL: https://github.com/brodieG/diffobj
 BugReports: https://github.com/brodieG/diffobj/issues
 RoxygenNote: 5.0.1
 Collate:
+    'capt.R'
     's4.R'
     'core.R'
     'misc.R'
