--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,6 @@ export(diff_print)
 export(diff_ses)
 export(diff_str)
 exportMethods(summary)
-import(ansistyle)
+import(crayon)
 importFrom(tools,Rdiff)
 useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
