splitting out 'line.limit' and 'pager'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,14 @@ export(Rdiff_obj)
 export(auto_context)
 export(auto_line_limit)
 export(console_lines)
+export(dfos)
 export(diff_chr)
 export(diff_deparse)
 export(diff_obj)
 export(diff_print)
 export(diff_ses)
 export(diff_str)
+export(diffobj_settings)
 exportMethods(summary)
 import(crayon)
 importFrom(tools,Rdiff)
