separate page and line limit more or less working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(Rdiff_chr)
 export(Rdiff_obj)
 export(auto_context)
-export(auto_line_limit)
 export(console_lines)
 export(dfos)
 export(diff_chr)
@@ -13,6 +12,7 @@ export(diff_print)
 export(diff_ses)
 export(diff_str)
 export(diffobj_settings)
+export(pager_settings)
 exportMethods(summary)
 import(crayon)
 importFrom(tools,Rdiff)
