--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ BugReports: https://github.com/brodieG/diffobj/issues
 RoxygenNote: 5.0.1
 Collate:
     'capt.R'
+    'check.R'
     'misc.R'
     's4.R'
     'core.R'
