--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,14 +4,13 @@ export(Rdiff_chr)
 export(Rdiff_obj)
 export(auto_context)
 export(console_lines)
-export(dfos)
 export(diff_chr)
 export(diff_deparse)
 export(diff_obj)
 export(diff_print)
 export(diff_ses)
 export(diff_str)
-export(diffobj_settings)
+export(etc)
 export(pager_settings)
 exportMethods(summary)
 import(crayon)
