fix recursive default arg 'etc', docup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,10 @@ export(diff_chr)
 export(diff_deparse)
 export(diff_obj)
 export(diff_print)
-export(diff_ses)
 export(diff_str)
 export(etc)
 export(pager_settings)
-exportMethods(summary)
+export(ses)
 import(crayon)
 importFrom(tools,Rdiff)
 useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
