--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(diff_deparse)
 export(diff_obj)
 export(diff_print)
 export(diff_str)
+export(diff_style)
+export(diff_style_theme)
 export(etc)
 export(pager_settings)
 export(ses)
