more comprehensive styles and docs
Switch to more S4 centric mode

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,16 +4,17 @@ export(Rdiff_chr)
 export(Rdiff_obj)
 export(auto_context)
 export(console_lines)
+export(diffObjStyle)
 export(diff_chr)
 export(diff_deparse)
 export(diff_obj)
 export(diff_print)
 export(diff_str)
-export(diff_style)
 export(diff_style_theme)
 export(etc)
 export(pager_settings)
 export(ses)
+exportClasses(diffObjStyle)
 import(crayon)
 importFrom(tools,Rdiff)
 useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
