starting to implement HTML styles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,11 @@ export(diff_obj)
 export(diff_print)
 export(diff_str)
 export(diff_style_theme)
+export(div_f)
 export(etc)
 export(pager_settings)
 export(ses)
+export(span_f)
 exportClasses(diffObjStyle)
 import(crayon)
 importFrom(tools,Rdiff)
