--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,10 +24,11 @@ Collate:
     'capt.R'
     'check.R'
     'misc.R'
+    'html.R'
+    'styles.R'
     's4.R'
     'core.R'
     'diff.R'
-    'html.R'
     'hunks.R'
     'layout.R'
     'myerssimple.R'
