implement internal css

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,14 @@ export(Rdiff_obj)
 export(auto_context)
 export(console_lines)
 export(diffObjStyle)
+export(diffObjStyleBasic)
+export(diffObjStyleBasicYB)
+export(diffObjStyleDark)
+export(diffObjStyleDarkYB)
+export(diffObjStyleHtml)
+export(diffObjStyleHtmlYB)
+export(diffObjStyleLight)
+export(diffObjStyleLightYB)
 export(diff_chr)
 export(diff_deparse)
 export(diff_obj)
@@ -17,6 +25,14 @@ export(pager_settings)
 export(ses)
 export(span_f)
 exportClasses(diffObjStyle)
+exportClasses(diffObjStyleBasic)
+exportClasses(diffObjStyleBasicYB)
+exportClasses(diffObjStyleDark)
+exportClasses(diffObjStyleDarkYB)
+exportClasses(diffObjStyleHtml)
+exportClasses(diffObjStyleHtmlYB)
+exportClasses(diffObjStyleLight)
+exportClasses(diffObjStyleLightYB)
 import(crayon)
 importFrom(tools,Rdiff)
 useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
