--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,14 +5,15 @@ export(Rdiff_obj)
 export(auto_context)
 export(console_lines)
 export(diffObjStyle)
-export(diffObjStyleBasic)
-export(diffObjStyleBasicYB)
-export(diffObjStyleDark)
-export(diffObjStyleDarkYB)
-export(diffObjStyleHtml)
-export(diffObjStyleHtmlYB)
-export(diffObjStyleLight)
-export(diffObjStyleLightYB)
+export(diffObjStyleAnsi256DarkRgb)
+export(diffObjStyleAnsi256DarkYb)
+export(diffObjStyleAnsi256LightRgb)
+export(diffObjStyleAnsi256LightYb)
+export(diffObjStyleAnsi8NeutralRgb)
+export(diffObjStyleAnsi8NeutralYb)
+export(diffObjStyleHtmlLightRgb)
+export(diffObjStyleHtmlLightYb)
+export(diffObjStylePalette)
 export(diff_chr)
 export(diff_deparse)
 export(diff_obj)
@@ -25,14 +26,15 @@ export(pager_settings)
 export(ses)
 export(span_f)
 exportClasses(diffObjStyle)
-exportClasses(diffObjStyleBasic)
-exportClasses(diffObjStyleBasicYB)
-exportClasses(diffObjStyleDark)
-exportClasses(diffObjStyleDarkYB)
-exportClasses(diffObjStyleHtml)
-exportClasses(diffObjStyleHtmlYB)
-exportClasses(diffObjStyleLight)
-exportClasses(diffObjStyleLightYB)
+exportClasses(diffObjStyleAnsi256DarkRgb)
+exportClasses(diffObjStyleAnsi256DarkYb)
+exportClasses(diffObjStyleAnsi256LightRgb)
+exportClasses(diffObjStyleAnsi256LightYb)
+exportClasses(diffObjStyleAnsi8NeutralRgb)
+exportClasses(diffObjStyleAnsi8NeutralYb)
+exportClasses(diffObjStyleHtmlLightRgb)
+exportClasses(diffObjStyleHtmlLightYb)
+exportClasses(diffObjStylePalette)
 import(crayon)
 importFrom(tools,Rdiff)
 useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
