docup, and more 'use.ansi' deprecation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,16 @@ export(Rdiff_chr)
 export(Rdiff_obj)
 export(auto_context)
 export(console_lines)
+export(cont_f)
 export(diffObjStyle)
+export(diffObjStyleAnsi)
 export(diffObjStyleAnsi256DarkRgb)
 export(diffObjStyleAnsi256DarkYb)
 export(diffObjStyleAnsi256LightRgb)
 export(diffObjStyleAnsi256LightYb)
 export(diffObjStyleAnsi8NeutralRgb)
 export(diffObjStyleAnsi8NeutralYb)
+export(diffObjStyleHtml)
 export(diffObjStyleHtmlLightRgb)
 export(diffObjStyleHtmlLightYb)
 export(diffObjStylePalette)
@@ -21,17 +24,19 @@ export(diff_print)
 export(diff_str)
 export(diff_style_theme)
 export(div_f)
-export(etc)
+export(gdo)
 export(pager_settings)
 export(ses)
 export(span_f)
 exportClasses(diffObjStyle)
+exportClasses(diffObjStyleAnsi)
 exportClasses(diffObjStyleAnsi256DarkRgb)
 exportClasses(diffObjStyleAnsi256DarkYb)
 exportClasses(diffObjStyleAnsi256LightRgb)
 exportClasses(diffObjStyleAnsi256LightYb)
 exportClasses(diffObjStyleAnsi8NeutralRgb)
 exportClasses(diffObjStyleAnsi8NeutralYb)
+exportClasses(diffObjStyleHtml)
 exportClasses(diffObjStyleHtmlLightRgb)
 exportClasses(diffObjStyleHtmlLightYb)
 exportClasses(diffObjStylePalette)
