starting to implement diff* methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(StylePalette)
 export(auto_context)
 export(console_lines)
 export(cont_f)
+export(diffPrint)
 export(diff_chr)
 export(diff_deparse)
 export(diff_obj)
@@ -48,6 +49,7 @@ exportClasses(StyleHtml)
 exportClasses(StyleHtmlLightRgb)
 exportClasses(StyleHtmlLightYb)
 exportClasses(StylePalette)
+exportMethods(diffPrint)
 import(crayon)
 importFrom(tools,Rdiff)
 useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
