--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,12 +21,12 @@ export(StylePalette)
 export(auto_context)
 export(console_lines)
 export(cont_f)
+export(diffChr)
+export(diffDeparse)
+export(diffObj)
 export(diffPrint)
-export(diff_chr)
-export(diff_deparse)
-export(diff_obj)
+export(diffStr)
 export(diff_print)
-export(diff_str)
 export(div_f)
 export(gdo)
 export(pager_settings)
@@ -49,7 +49,11 @@ exportClasses(StyleHtml)
 exportClasses(StyleHtmlLightRgb)
 exportClasses(StyleHtmlLightYb)
 exportClasses(StylePalette)
+exportMethods(diffChr)
+exportMethods(diffDeparse)
+exportMethods(diffObj)
 exportMethods(diffPrint)
+exportMethods(diffStr)
 import(crayon)
 importFrom(tools,Rdiff)
 useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
