--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(PagerBrowser)
 export(PagerOff)
 export(PagerSystem)
 export(PagerSystemLess)
+export(PaletteOfStyles)
 export(Rdiff_chr)
 export(Rdiff_obj)
 export(Style)
@@ -17,7 +18,6 @@ export(StyleAnsi8NeutralYb)
 export(StyleHtml)
 export(StyleHtmlLightRgb)
 export(StyleHtmlLightYb)
-export(StylePalette)
 export(auto_context)
 export(console_lines)
 export(cont_f)
@@ -36,6 +36,7 @@ exportClasses(PagerBrowser)
 exportClasses(PagerOff)
 exportClasses(PagerSystem)
 exportClasses(PagerSystemLess)
+exportClasses(PaletteOfStyles)
 exportClasses(Style)
 exportClasses(StyleAnsi)
 exportClasses(StyleAnsi256DarkRgb)
@@ -47,7 +48,6 @@ exportClasses(StyleAnsi8NeutralYb)
 exportClasses(StyleHtml)
 exportClasses(StyleHtmlLightRgb)
 exportClasses(StyleHtmlLightYb)
-exportClasses(StylePalette)
 exportMethods(diffObj)
 import(crayon)
 importFrom(tools,Rdiff)
