more tweaks to list guides

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(diffPrint)
 export(diffStr)
 export(div_f)
 export(gdo)
+export(guideLines)
 export(pager_settings)
 export(ses)
 export(span_f)
