more comprehensive guide implementation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,8 +20,10 @@ export(StyleHtml)
 export(StyleHtmlLightRgb)
 export(StyleHtmlLightYb)
 export(auto_context)
+export(chrGuideLines)
 export(console_lines)
 export(cont_f)
+export(deparseGuideLines)
 export(diffChr)
 export(diffDeparse)
 export(diffObj)
@@ -29,10 +31,11 @@ export(diffPrint)
 export(diffStr)
 export(div_f)
 export(gdo)
-export(guideLines)
 export(pager_settings)
+export(printGuideLines)
 export(ses)
 export(span_f)
+export(strGuideLines)
 exportClasses(AlignThreshold)
 exportClasses(Pager)
 exportClasses(PagerBrowser)
