starting to implement summary methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ exportClasses(StyleHtml)
 exportClasses(StyleHtmlLightRgb)
 exportClasses(StyleHtmlLightYb)
 exportMethods(diffObj)
+exportMethods(summary)
 import(crayon)
 importFrom(tools,Rdiff)
 useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
