'diffFile' implemented, working on 'diffCsv'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,11 +27,14 @@ export(console_lines)
 export(cont_f)
 export(deparseGuideLines)
 export(diffChr)
+export(diffCsv)
 export(diffDeparse)
+export(diffFile)
 export(diffObj)
 export(diffPrint)
 export(diffStr)
 export(div_f)
+export(fileGuideLines)
 export(gdo)
 export(pager_settings)
 export(printGuideLines)
