add subsetting methods for 'Diff'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,9 +61,12 @@ exportClasses(StyleHtml)
 exportClasses(StyleHtmlLightRgb)
 exportClasses(StyleHtmlLightYb)
 exportClasses(StyleText)
+exportMethods("[")
 exportMethods(diffObj)
+exportMethods(head)
 exportMethods(show)
 exportMethods(summary)
+exportMethods(tail)
 import(crayon)
 importFrom(tools,Rdiff)
 useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
