--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(diffStr)
 export(div_f)
 export(fileGuideLines)
 export(gdo)
+export(pager_is_less)
 export(pager_settings)
 export(printGuideLines)
 export(ses)
