Splitting up summary into 'as.character' and 'show' methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(diffFile)
 export(diffObj)
 export(diffPrint)
 export(diffStr)
+export(diffobj_css)
 export(div_f)
 export(gdo)
 export(guidesChr)
@@ -45,6 +46,7 @@ export(trimChr)
 export(trimDeparse)
 export(trimFile)
 export(trimPrint)
+export(trimStr)
 exportClasses(AlignThreshold)
 exportClasses(Pager)
 exportClasses(PagerBrowser)
@@ -66,6 +68,7 @@ exportClasses(StyleHtmlLightRgb)
 exportClasses(StyleHtmlLightYb)
 exportClasses(StyleText)
 exportMethods("[")
+exportMethods(as.character)
 exportMethods(diffObj)
 exportMethods(head)
 exportMethods(show)
