--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(diffObj)
 export(diffPrint)
 export(diffStr)
 export(diffobj_css)
+export(diffobj_set_def_opts)
 export(div_f)
 export(gdo)
 export(guidesChr)
