updating Rdiff funs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(guidesDeparse)
 export(guidesFile)
 export(guidesPrint)
 export(guidesStr)
+export(has_Rdiff)
 export(pager_is_less)
 export(ses)
 export(span_f)
@@ -76,5 +77,6 @@ exportMethods(show)
 exportMethods(summary)
 exportMethods(tail)
 import(crayon)
+import(methods)
 importFrom(tools,Rdiff)
 useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
