--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(StyleFuns)
 export(StyleHtml)
 export(StyleHtmlLightRgb)
 export(StyleHtmlLightYb)
+export(StyleRaw)
 export(StyleText)
 export(auto_context)
 export(console_lines)
@@ -68,6 +69,7 @@ exportClasses(StyleFuns)
 exportClasses(StyleHtml)
 exportClasses(StyleHtmlLightRgb)
 exportClasses(StyleHtmlLightYb)
+exportClasses(StyleRaw)
 exportClasses(StyleText)
 exportMethods("[")
 exportMethods(as.character)
