updating docs for R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,13 +45,13 @@ export(has_Rdiff)
 export(pager_is_less)
 export(ses)
 export(span_f)
+export(tag_f)
 export(trimChr)
 export(trimDeparse)
 export(trimFile)
 export(trimPrint)
 export(trimStr)
 exportClasses(AlignThreshold)
-exportClasses(Pager)
 exportClasses(PagerBrowser)
 exportClasses(PagerOff)
 exportClasses(PagerSystem)
@@ -71,14 +71,10 @@ exportClasses(StyleHtmlLightRgb)
 exportClasses(StyleHtmlLightYb)
 exportClasses(StyleRaw)
 exportClasses(StyleText)
-exportMethods("[")
-exportMethods(as.character)
 exportMethods(diffObj)
-exportMethods(head)
-exportMethods(show)
 exportMethods(summary)
-exportMethods(tail)
 import(crayon)
 import(methods)
 importFrom(tools,Rdiff)
+importFrom(utils,browseURL)
 useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
