fix sample banners, docup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,8 +71,11 @@ exportClasses(StyleHtmlLightRgb)
 exportClasses(StyleHtmlLightYb)
 exportClasses(StyleRaw)
 exportClasses(StyleText)
+exportMethods("[")
 exportMethods(diffObj)
+exportMethods(head)
 exportMethods(summary)
+exportMethods(tail)
 import(crayon)
 import(methods)
 importFrom(tools,Rdiff)
