--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(guidesFile)
 export(guidesPrint)
 export(guidesStr)
 export(has_Rdiff)
+export(make_blocking)
 export(pager_is_less)
 export(ses)
 export(span_f)
@@ -52,7 +53,6 @@ export(trimFile)
 export(trimPrint)
 export(trimStr)
 exportClasses(AlignThreshold)
-exportClasses(PagerBrowser)
 exportClasses(PagerOff)
 exportClasses(PagerSystem)
 exportClasses(PagerSystemLess)
