--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,11 @@ language: r
 sudo: false
 cache: packages
 
+branches:
+  only:
+  - master
+  - development
+  - rc
+
 after_success:
   - Rscript -e 'covr::codecov()'
