--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,15 @@ exportMethods(summary)
 exportMethods(tail)
 import(crayon)
 import(methods)
+importFrom(grDevices,rgb)
+importFrom(stats,ave)
+importFrom(stats,frequency)
+importFrom(stats,is.ts)
+importFrom(stats,setNames)
 importFrom(tools,Rdiff)
 importFrom(utils,browseURL)
+importFrom(utils,capture.output)
+importFrom(utils,file_test)
+importFrom(utils,packageVersion)
+importFrom(utils,read.csv)
 useDynLib(diffobj, .registration=TRUE, .fixes="DIFFOBJ_")
