--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Compare R Objects with a Diff
 Description:  Colorized diffs to quickly identify _and understand_ differences
     between R objects.  See `vignette("diffobj")` for details.
 Version: 0.1.1
-Date: 2016-07-24
+Date: 2016-07-29
 Authors@R: c(
     person(
     "Brodie", "Gaslam", email="brodie.gaslam@yahoo.com",
@@ -13,7 +13,7 @@ Authors@R: c(
     "Michael B.", "Allen", email="ioplex@gmail.com",
     role=c("cph"),
     comment="C implementation of Myers Diff Algorithm"))
-License: GPL-3 | MIT + file LICENSE
+License: GPL-3
 LazyData: true
 URL: https://github.com/brodieG/diffobj
 BugReports: https://github.com/brodieG/diffobj/issues
