--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(diffObj)
 export(diffPrint)
 export(diffStr)
 export(diffobj_css)
+export(diffobj_js)
 export(diffobj_set_def_opts)
 export(div_f)
 export(gdo)
