--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(trimDeparse)
 export(trimFile)
 export(trimPrint)
 export(trimStr)
+export(view_or_browse)
 exportClasses(AlignThreshold)
 exportClasses(PagerOff)
 exportClasses(PagerSystem)
