html output working again, kind of

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(diffobj_css)
 export(diffobj_js)
 export(diffobj_set_def_opts)
 export(div_f)
+export(finalizer)
 export(gdo)
 export(guidesChr)
 export(guidesDeparse)
