more summary display tweaks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,8 @@ exportClasses(StyleHtml)
 exportClasses(StyleHtmlLightRgb)
 exportClasses(StyleHtmlLightYb)
 exportClasses(StyleRaw)
+exportClasses(StyleSummary)
+exportClasses(StyleSummaryHtml)
 exportClasses(StyleText)
 exportMethods("[")
 exportMethods(diffObj)
