R CMD check doc issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ export(diffobj_css)
 export(diffobj_js)
 export(diffobj_set_def_opts)
 export(div_f)
-export(finalizer)
+export(finalizeHtml)
 export(gdo)
 export(guidesChr)
 export(guidesDeparse)
@@ -45,6 +45,7 @@ export(guidesPrint)
 export(guidesStr)
 export(has_Rdiff)
 export(make_blocking)
+export(nchar_html)
 export(pager_is_less)
 export(ses)
 export(span_f)
