--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: diffobj
 Type: Package
-Title: Compare R Objects with a Diff
-Description: Colorized diffs to quickly identify _and understand_ differences
-    between R objects.  See `vignette("diffobj")` for details.
+Title: Visualize Differences Between R Objects
+Description: Generate a colorized diff of two R objects for an intuitve
+    visualization of  their differences.
 Version: 0.1.3
-Date: 2016-07-31
+Date: 2016-08-19
 Authors@R: c(
     person(
     "Brodie", "Gaslam", email="brodie.gaslam@yahoo.com",
     role=c("aut", "cre")),
     person(
     "Michael B.", "Allen", email="ioplex@gmail.com",
-    role=c("cph"),
+    role=c("ctb", "cph"),
     comment="C implementation of Myers Diff Algorithm"))
 License: GPL-3
 LazyData: true
