--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Diffs for R Objects
 Description: Generate a colorized diff of two R objects for an intuitive
     visualization of their differences.
-Version: 0.1.5.9006
+Version: 0.1.5.9007
 Date: 2016-09-14
 Authors@R: c(
     person(
@@ -13,7 +13,7 @@ Authors@R: c(
     "Michael B.", "Allen", email="ioplex@gmail.com",
     role=c("ctb", "cph"),
     comment="Original C implementation of Myers Diff Algorithm"))
-License: GPL-3
+License: GPL (>= 2)
 LazyData: true
 URL: https://github.com/brodieG/diffobj
 BugReports: https://github.com/brodieG/diffobj/issues
