hunk data as integer

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,11 +1,12 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^\DEVNOTES\.md$
-^\NOTES\.md$
-^\ISSUES\.md$
-^\CRAN\.md$
+^DEVNOTES\.md$
+^CONTRIBUTING\.md$
+^CRAN\.md$
 ^\.travis\.yml$
-^scratch\.R$
-^cliandrstudio\.png$
-\.Rdata
-covr\.R
+.Rdata
+^covr\.R
+^extra$
+^scratch\.R
+^README\.Rmd
+^README\.html
