--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Diffs for R Objects
 Description: Generate a colorized diff of two R objects for an intuitive
     visualization of their differences.
-Version: 0.1.9
-Date: 2018-01-26
+Version: 0.1.10.9000
+Date: 2018-06-06
 Authors@R: c(
     person(
     "Brodie", "Gaslam", email="brodie.gaslam@yahoo.com",
@@ -22,8 +22,7 @@ VignetteBuilder: knitr
 Suggests:
     knitr,
     rmarkdown,
-    testthat,
-    covr
+    testthat
 Collate:
     'capt.R'
     'check.R'
