--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,8 @@ Authors@R: c(
     "Michael B.", "Allen", email="ioplex@gmail.com",
     role=c("ctb", "cph"),
     comment="Original C implementation of Myers Diff Algorithm"))
+Depends:
+    R (>= 3.1.0)
 License: GPL (>= 2)
 LazyData: true
 URL: https://github.com/brodieG/diffobj
