restructure ses_dat to format closer to diff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(make_blocking)
 export(nchar_html)
 export(pager_is_less)
 export(ses)
+export(ses_dat)
 export(span_f)
 export(tag_f)
 export(trimChr)
