try to add libcurl

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -61,6 +61,7 @@ jobs:
       - name: Install system dependencies on Linux
         if: runner.os == 'Linux'
         run: |
+          sudo apt-get install libcurl4-openssl-dev
           while read -r cmd
           do
             eval sudo $cmd
