only codecov on devel

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -85,5 +85,6 @@ jobs:
           path: check
 
       - name: Test coverage
+        if: runner.r == 'devel'
         run: covr::codecov()
         shell: Rscript {0}
