try to add C nocov

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -86,5 +86,9 @@ jobs:
 
       - name: Test coverage
         if: matrix.config.r == 'release'
-        run: covr::codecov()
+        run: |
+          options(covr.exclude_end="(?://|#)[[:space:]]*nocov[[:space:]]*end")
+          options(covr.exclude_start="(?://|#)[[:space:]]*nocov[[:space:]]*start")
+          options(covr.exclude_pattern="(?://|#)[[:space:]]*nocov")
+          covr::codecov()
         shell: Rscript {0}
